Security/podWithServiceAccountMounted.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    name: nginx
spec:
  automountServiceAccountToken: false
  containers:
    - name: nginx
      image: nginx
      resources:
        limits:
          memory: '128Mi'
          cpu: '500m'
