Security/db-api-pod-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db   # this associates this network policy to the db pod, blocking all the outside network
