Security/db-backup-push-pod-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db   # this associates this network policy to the db pod, blocking all the outside network
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
    # rule 1
      - podSelector:      # this allows only pods with `api-pod` label to request data
          matchLabels:
            name: api-pod
        ports:
          - protocol: TCP
            port: 3306
  egress:
    - to:
      - ipBlock:
          cidr: 192.168.5.10/32
      ports:
      - protocol: TCP
        port: 80
